--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,17 @@ cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
 cryptography==2.9.2
+enum34==1.1.6
 Flask==1.1.2
+funcsigs==1.0.2
 idna==2.9
+ipaddress==1.0.23
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mock==3.0.5
+mod-wsgi-httpd==2.4.41.1
+mod-wsgi-standalone==4.7.1
 paramiko==2.7.1
 PlexAPI==3.4.0
 pycparser==2.20
